Første Solr API "hul igennem"
